--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -332,7 +332,7 @@
                                                 <th data-sorter="false" style="text-align: left;" th:title="'Customer Code'">CC</th>
                                                 <th data-sorter="false" style="text-align: left;" th:title="'Collection Group Designation'">CGD</th>
                                                 <th data-sorter="false" style="text-align: left;" th:title="'Use Restriction'">Use Restriction</th>
-                                                <th th:if="${!subject.isPermitted('BarcodeRestriction')}" data-sorter="false" style="text-align: left;" th:title="'Barcode'">Barcode</th>
+                                                <th th:if="${!session.isBarcodeRestricted}" data-sorter="false" style="text-align: left;" th:title="'Barcode'">Barcode</th>
                                                 <th data-sorter="false" style="text-align: left;" th:title="'Summary Holdings'">SH</th>
                                             </tr>
                                         </thead>
@@ -392,7 +392,7 @@
                                                 <input type="hidden" th:field="*{searchResultRows[__${searchResultStat.index}__].useRestriction}"/>
                                                 <span data-th-id="'searchResultsDataURS-'+ ${searchResultStat.index}" th:text="${searchResult.useRestriction == 'No Restrictions'} ? '' : ${searchResult.useRestriction}"></span>
                                             </td>
-                                            <td th:if="${!subject.isPermitted('BarcodeRestriction')}" data-th-id="'searchResultsDataBar-'+ ${searchResultStat.index}">
+                                            <td th:if="${!session.isBarcodeRestricted}" data-th-id="'searchResultsDataBar-'+ ${searchResultStat.index}">
                                                 <input data-th-id="'showItemsInput-'+ ${searchResultStat.index}" name="showItemsInput" type="hidden" th:value="false"/>
                                                 <a class="btn" th:if="${searchResult.showItems}" data-toggle="collapse" th:attr="data-target='.row' + ${searchResultStat.index}" th:onclick="'javascript:showItems('+${searchResultStat.index}+')'">
                                                     <i data-th-id="'showItemsIcon-'+ ${searchResultStat.index}" name="showItemsIcon" class="fa fa-plus-circle" aria-hidden="true" style="font-size: 25px;"></i>
@@ -507,7 +507,7 @@
                                                 class="btn btn-primary pull-right" style="margin-right: 10px;"
                                                 disabled="disabled">Export Selected Records
                                         </button>
-                                        <button th:if="${subject.isPermitted('RequestPlace') || subject.isPermitted('RequestItems')}" id="" type="button" name="" value="" class="btn btn-primary pull-right"
+                                        <button th:if="${session.isRequestAllowed || session.isRequestItemAllowed}" id="" type="button" name="" value="" class="btn btn-primary pull-right"
                                                 style="margin-right: 10px;" disabled="disabled">Request Selected
                                             Items(s)
                                         </button>
