--- a/src/main/resources/templates/searchRecords.html
+++ b/src/main/resources/templates/searchRecords.html
@@ -25,17 +25,17 @@
     <div class="container-fluid">
         <div class="row">
             <div class="dashboard-content col-sm-12">
-                <ul id="search-content-tab" class="nav nav-tabs" role="tablist">
-                    <li th:if="${subject.isPermitted('SCSBSearchExport')}" role="presentation" class="tab-search-holder" th:classappend="${#httpServletRequest.getRequestURI() == '/search' ? 'active':''}">
+                <ul th:unless="${session == null}" id="search-content-tab" class="nav nav-tabs" role="tablist">
+                    <li th:if="${session.isSearchAllowed}"  role="presentation" class="tab-search-holder" th:classappend="${#httpServletRequest.getRequestURI() == '/search' ? 'active':''}">
                         <a href="/search" aria-controls="search" class="tab-search"><span class="icons"></span><span>Search</span></a>
                     </li>
-                    <li th:if="${subject.isPermitted('WriteCGD') || subject.isPermitted('DeAccession')}" role="presentation" class="tab-collection-holder" th:classappend="${#httpServletRequest.getRequestURI() == '/collection' ? 'active':''}">
+                    <li th:if="${session.isCollectionAllowed}" role="presentation" class="tab-collection-holder" th:classappend="${#httpServletRequest.getRequestURI() == '/collection' ? 'active':''}">
                         <a href="/collection" aria-controls="collection" class="tab-collection"><span class="icons"></span><span>Collection</span></a>
                     </li>
-                    <li th:if="${subject.isPermitted('RequestPlace') || subject.isPermitted('RequestPlaceAll') || subject.isPermitted('RequestItems')}" role="presentation" class="tab-request-holder" th:classappend="${#httpServletRequest.getRequestURI() == '/request' ? 'active':''}">
+                    <li th:if="${session.isRequestAllowed}" role="presentation" class="tab-request-holder" th:classappend="${#httpServletRequest.getRequestURI() == '/request' ? 'active':''}">
                         <a href="/request" aria-controls="request" class="tab-request"><span class="icons"></span><span>Request</span></a>
                     </li>
-                    <li th:if="${subject.isPermitted('ViewPrintReports')}" role="presentation" class="tab-reports-holder" th:classappend="${#httpServletRequest.getRequestURI() == '/reports' ? 'active':''}">
+                    <li th:if="${session.isReportAllowed}" role="presentation" class="tab-reports-holder" th:classappend="${#httpServletRequest.getRequestURI() == '/reports' ? 'active':''}">
                         <a href="/reports" aria-controls="reports" class="tab-reports"><span class="icons"></span><span>Reports</span></a>
                     </li>
                 </ul>
