SCSB-UI Authentication changes & code clean up

--- a/src/main/resources/templates/recapHeader.html
+++ b/src/main/resources/templates/recapHeader.html
@@ -42,7 +42,7 @@
                                 <div class="row margin-top-15 text-right" style="margin-bottom: 15px;">
                                     <div class="col-xs-12">
                                         <div class="pull-right  margin-left-30">
-                                            <a href="#" class="logout-login logout"><span></span>Logout</a>
+                                            <a href="/logout" class="logout-login logout"><span></span>Logout</a>
                                         </div>
                                         <div class="pull-right">
                                             <a href="#" class="settings"><span></span>Settings</a>
