Recap-320 clear X icon in search tab fixed, Recap-350 and 359 Roles and updated icons for roles and users tab.

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -251,6 +251,10 @@ li.active a.tab-users span{color:#D38C0D;}
 .Deaccessionbacklink a span{border-radius:50%;padding:5px; color:#fff;background:#699683;font-size:11px;top:-3px}
 .create-request-section .buscador-principal .form-control{border:1px solid #888988}
 .create-request-section .buscador-principal .select-holder:after{padding:14px 6px}
+.create-role-section .buscador-principal .form-control{border:0.5px solid #888988}
+.edit-role-section .buscador-principal .form-control{border:0.5px solid #888988}
+.delete-role-section .buscador-principal .form-control{border:0.5px solid #888988}
+
 #recapreports .table tr.bgcolored{background:#F7DADA;}
 #recapreports .table tr th{padding:10px 8px}
 #recapreports .table thead tr{background:#7f807f !important;font-weight:normal}
@@ -297,10 +301,10 @@ textarea{resize:none;}
 #search-filter h2{margin:50px 0 20px}
 .search-table-header-note{position:absolute;color:#7F807F;font-weight:700;font-size:12px;left:25px;top:35px;width:670px;}
 .search-bar .notes span{color:#000;}
-.search-request a,.backtext a,.Deaccessionbacklink a,.rolebacklink a,.usersbacklink a,.userscreaterequestlink a{color:#699683;font-size:22px}
+.search-request a,.backtext a,.Deaccessionbacklink a,.rolebacklink a,.roleCreateNewlink a,.usersbacklink a,.userscreaterequestlink a{color:#699683;font-size:22px}
 /*#request .search-bar .buscador-principal [class*="themed-"],*/
-#recapreports .search-bar .buscador-principal [class*="themed-"],
-#recaprole .search-bar .buscador-principal [class*="themed-"],
+/*#recapreports .search-bar .buscador-principal [class*="themed-"],
+#recaprole .search-bar .buscador-principal [class*="themed-"],*/
 #recapusers .search-bar .buscador-principal [class*="themed-"]{height:auto}
 #request .search-bar .buscador-principal,
 #recapreports .search-bar .buscador-principal,
@@ -313,6 +317,7 @@ textarea{resize:none;}
 #request .search-bar .buscador-principal .themed-button,
 #recapreports .search-bar .buscador-principal .themed-button,
 #recaprole .search-bar .buscador-principal .themed-button,
+#recaprole .create-role-section .buscador-principal .themed-button,
 #recapusers .search-bar .buscador-principal .themed-button{margin-top:30px;padding:5px 0;text-align:center}
 #request .search-bar .buscador-principal .themed-button-search,
 #request .search-bar .buscador-principal .themed-button-search:focus
@@ -326,6 +331,7 @@ textarea{resize:none;}
 #recaprole .search-bar .buscador-principal .themed-button-search:focus
 #recaprole .search-bar .buscador-principal .themed-button-search:visited{background-color:#29B7D3;}
 #recaprole .search-bar .buscador-principal .themed-button-search:hover{background-color:#24a1b9;}
+#recaprole .form-group.has-error .help-block{left:0}
 #recapusers .search-bar .buscador-principal .themed-button-search,
 #recapusers .search-bar .buscador-principal .themed-button-search:focus,
 #recapusers .search-bar .buscador-principal .themed-button-search:visited{background-color:#D38C0D;}
