Recap-356 : Modified code for request UI to be integrated for request workflow.

--- a/src/main/resources/templates/request.html
+++ b/src/main/resources/templates/request.html
@@ -64,7 +64,7 @@
 
                                         </div>
                                     </div>
-                                    <div class="col-sm-9 col-md-10 col-lg-7 margin-top-10"><div class="row">RP - Request Position, RI - Requesting Institution, RT - Request Type, OI - Owning Institution</div>
+                                    <div class="col-sm-9 col-md-10 col-lg-7 margin-top-10"><div class="row">RI - Requesting Institution, RT - Request Type, OI - Owning Institution</div>
                                     </div>
                                     <div class="col-sm-12 col-md-12 col-lg-3 text-right"><h4>Search Results Found: <span th:text="*{totalRecordsCount}"></span></h4></div>
                                 </div>
@@ -473,10 +473,6 @@
                                     <div class="col-sm-12">
                                         <div class="padding-10">
                                             <table class="table table-striped small margin-btm-0">
-                                                <tr>
-                                                    <td>Request Position</td>
-                                                    <td><span></span></td>
-                                                </tr>
                                                 <tr>
                                                     <td>Item Barcode</td>
                                                     <td><span id="itemBarcodeInRequest" th:text="${requestForm.itemBarcodeInRequest}"></span></td>
