Permissions added to Roles & Users tab

--- a/src/main/resources/templates/searchRecords.html
+++ b/src/main/resources/templates/searchRecords.html
@@ -38,10 +38,10 @@
                     <li th:if="${session.isReportAllowed}" role="presentation" class="tab-reports-holder" th:classappend="${#httpServletRequest.getRequestURI() == '/reports' ? 'active':''}">
                         <a href="/reports" aria-controls="reports" class="tab-reports"><span class="icons"></span><span>Reports</span></a>
                     </li>
-                    <li role="presentation" class="tab-roles-holder" th:classappend="${#httpServletRequest.getRequestURI() == '/roles' ? 'active':''}">
+                    <li th:if="${session.isUserRoleAllowed}" role="presentation" class="tab-roles-holder" th:classappend="${#httpServletRequest.getRequestURI() == '/roles' ? 'active':''}">
                         <a href="/roles" aria-controls="roles" class="tab-role"><span class="icons"></span><span>Roles</span></a>
                     </li>
-                    <li role="presentation" class="tab-users-holder" th:classappend="${#httpServletRequest.getRequestURI() == '/userRoles' ? 'active':''}">
+                    <li th:if="${session.isUserRoleAllowed}" role="presentation" class="tab-users-holder" th:classappend="${#httpServletRequest.getRequestURI() == '/userRoles' ? 'active':''}">
                         <a href="/userRoles" aria-controls="users" class="tab-users"><span class="icons"></span><span>Users</span></a>
                     </li>
                 </ul>
