Recap-404 : Changes to send email when cgd is updated.

--- a/src/main/resources/templates/collection.html
+++ b/src/main/resources/templates/collection.html
@@ -193,6 +193,7 @@
                                                 <div class="col-sm-7 fontcolor-light"><span th:text="${collectionForm.publisher}"></span></div>
                                             </div>
                                             <div class="row margin-btm-05">
+                                                <input type="hidden" th:field="${collectionForm.owningInstitution}"/>
                                                 <div class="col-sm-5">Owning Institution</div>
                                                 <div class="col-sm-7 fontcolor-light"><span th:text="${collectionForm.owningInstitution}"></span></div>
                                             </div>
