--- a/src/main/resources/templates/userRolesSearch.html
+++ b/src/main/resources/templates/userRolesSearch.html
@@ -7,7 +7,7 @@
     <script type="text/javascript" th:src="@{../js/select-step.js}"></script>
     <link rel="stylesheet" th:href="@{../css/bootstrap-multiselect.css}"/>
     <link rel="stylesheet" th:href="@{../css/select-step.css}"/>
-    <script type="text/javascript" th:src="@{../js/userRole.js?}"></script>
+    <script type="text/javascript" th:src="@{../js/userRole.js}"></script>
     <div id="userRolesFormDivId" name="userRolesFormDivName" th:fragment="userRole-form"
          xmlns:th="http://www.thymeleaf.org" th:remove="tag">
         <form id="userRole-form" name="userRole-form" class="form-horizontal" action="#"
@@ -79,6 +79,15 @@
                                                             th:text="${userRoleForm.message}"></span></div>
                                                 </div>
                                             </div>
+                                            <div class="row margin-btm-10" id="deletedSuccessMsg"
+                                                 data-th-if="${userRoleForm.deletedSuccessMsg}">
+                                                <div class="col-sm-12 text-left">
+                                                    <div class="alert alert-success" role="alert"><span
+                                                            class="margin-right-05 glyphicon glyphicon-warning-sign"></span><span
+                                                            th:text="${userRoleForm.message}"></span></div>
+                                                </div>
+                                            </div>
+
                                             <div class="row margin-btm-10" id="deleteSuccessMsg"
                                                  data-th-if="${userRoleForm.deleteSuccessMsg}">
                                                 <div class="col-sm-12 text-left">
@@ -469,14 +478,12 @@
                                         class="glyphicon glyphicon-menu-left"></span> Go Back</a>
                             </div>
                         </div>
-                        <div class="row margin-btm-10" id="deletedSuccessMsg"
-                             data-th-if="${userRoleForm.deletedSuccessMsg}">
-                            <div class="col-sm-12 text-left">
-                                <div class="alert alert-success" role="alert"><span
-                                        class="margin-right-05 glyphicon glyphicon-warning-sign"></span><span
-                                        th:text="${userRoleForm.message}"></span></div>
-                            </div>
-                        </div>
+                        <input id="afterDelPageNumber" name="afterDelPageNumber" type="text"
+                               th:field="${userRoleForm.afterDelPageNumber}" hidden="hidden"/>
+                        <input id="afterDelTotalPageCount" name="afterDelTotalPageCount" type="text"
+                               th:field="${userRoleForm.afterDelTotalPageCount}" hidden="hidden"/>
+                        <input id="afterDelPageSize" name="afterDelPageSize" type="text"
+                               th:field="${userRoleForm.afterDelPageSize}" hidden="hidden"/>
                         <div class="row margin-btm-10" id="deleteErrorMsg"
                              data-th-if="${userRoleForm.deleteErrorMsg}">
                             <div class="col-sm-12 text-left">
@@ -539,7 +546,6 @@
                                                             th:value="${roleValues[0]}" th:text="${roleValues[1]}"
                                                             th:selected="${userRoleForm.showSelectedForCreate.contains(roleValues)}"></option>
                                                 </select>
-                                                <span id="DeleteRoleIdErrMsg" style="color: red;display: none">Please select roles</span>
                                             </div>
 
                                         </div>
@@ -554,7 +560,6 @@
                                                    id="deleteUserDescription"
                                                    th:field="${userRoleForm.editUserDescription}" placeholder=""
                                                    type="text"/>
-                                            <span id="deleteUserDescriptionErrMsg" style="color: red;display: none">Please provide User Description </span>
                                         </div>
                                     </div>
                                     <div class="form-group">
@@ -567,7 +572,6 @@
                                                    id="deleteEmailId"
                                                    th:field="${userRoleForm.editEmailId}" placeholder=""
                                                    type="text"/>
-                                            <!--<span id="editEmailIdErrMsg" style="color: red;display: none">Please provide User Description </span>-->
                                         </div>
                                     </div>
 
