--- a/src/main/resources/templates/userRolesSearch.html
+++ b/src/main/resources/templates/userRolesSearch.html
@@ -224,14 +224,6 @@
                                         th:text="${userRoleForm.message}"></span></div>
                             </div>
                         </div>
-                        <div class="row margin-btm-10" id="errormsg"
-                             data-th-if="${userRoleForm.showCreateError}">
-                            <div class="col-sm-12 text-left">
-                                <div class="alert alert-danger" role="alert"><span
-                                        class="margin-right-05 glyphicon glyphicon-warning-sign"></span><span
-                                        th:text="${userRoleForm.message}"></span></div>
-                            </div>
-                        </div>
                         <div class="row">
                             <div class="col-xs-12 divider-horizontal margin-top-10 margin-btm-30"></div>
                         </div>
@@ -360,7 +352,7 @@
                             <div class="col-sm-12 text-left">
                                 <div class="alert alert-danger" role="alert"><span
                                         class="margin-right-05 glyphicon glyphicon-warning-sign"></span><span
-                                        th:text="${userRoleForm.message}"></span></div>
+                                        th:text="${userRoleForm.editErromessage}"></span></div>
                             </div>
                         </div>
                         <div class="row">
@@ -372,7 +364,7 @@
                                 <form class="form-horizontal" id="editusers-createrequest" method="post"
                                       th:object="${userRoleForm}">
                                     <div class="form-group">
-                                        <input type="text" th:field="${userRoleForm.networkLoginId}" hidden="hidden"/>
+                                        <input type="text" th:field="${userRoleForm.userId}" hidden="hidden" id="editUserId"/>
                                         <div class="col-md-3 text-right col-sm-4">
                                             <label for="networkLoginId" class="margin-top-10">Network Login id <span
                                                     class="error-color">*</span></label>
@@ -495,7 +487,7 @@
                         <div class="row">
                             <div class="col-xs-12 divider-horizontal margin-top-10 margin-btm-30"></div>
                         </div>
-                        <div class="row">
+                        <div class="row buscador-principal">
                             <div class="col-md-8 col-sm-6"></div>
                             <div class="col-md-8 col-sm-6">
                                 <form class="form-horizontal" id="deleteUsersForm" method="post"
