--- a/src/main/resources/templates/roles.html
+++ b/src/main/resources/templates/roles.html
@@ -421,7 +421,7 @@
                             <div class="col-xs-12 divider-horizontal margin-top-10 margin-btm-10"></div>
                         </div>
                         <div class="buscador-principal">
-                            <div class="row margin-top-25 margin-btm-30">
+                            <div class="row margin-top-25 margin-btm-30" style="margin-top: 60px;">
                                 <div class="col-sm-12">
                                     <div class="row">
                                         <div class="row">
